# ciso

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  ciso.html  ciso.pyx  ciso_c_grid-output.html  ciso_c_grid-output.ipynb  ciso_test.py  ciso_unstructure-output.html  ciso_unstructure-output.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  deploy-docs.yml  tests.yml
_modules/: index.html
_modules/ciso/: ciso.html
_sources/: ciso_c_grid-output.ipynb.txt  ciso_unstructure-output.ipynb.txt  index.rst.txt
_static/: documentation_options.js
ciso/: __init__.py  _ciso.c  _ciso.pyx  _version.py  ciso.py
ciso/tests/: test_ciso.py
docs/source/: ciso.rst  conf.py
notebooks/: ciso_FVCOM_example.ipynb  ciso_ROMS_example.ipynb  ciso_c_grid.ipynb  ciso_unstructure.ipynb  make_NECOFS_GOM3_FORECAST.nc.py
tests/: test_ciso.py
tests/data/: fortran.npz
