[build-system]
requires = [
  "setuptools>=41.2",
  "setuptools-scm",
  "cython>=3",
  "numpy>=2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ciso"
dynamic = ["version"]
description = "Create isosurfaces from 2D or 3D arrays"
readme = "README.md"
authors = [
  {email = "hetland@tamu.edu"},
  {name = "Robert Hetland"}
]
requires-python = ">=3.10"
license = {text = "BSD-2-Clause"}
dependencies = [
    "numpy",
]

[project.optional-dependencies]
extras = [
    "gridgeo",
    "cartopy",
    "xarray",
]

[project.urls]
homepage = "https://github.com/ioos/ciso"
documentation = "https://ioos.github.io/ciso"
repository = "https://github.com/ioos/ciso"

[tool.setuptools]
license-files = ["LICENSE.txt"]
zip-safe = true
platforms = ["any"]
packages = ["ciso"]

[tool.setuptools_scm]
write_to = "ciso/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
addopts = "-s -rxs -v"

[check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 85
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.environments]
default = { features = ["py312"], solve-group = "py312" }
py312 = { features = ["py312"], solve-group = "py312" }
py311 = ["py311"]
py310 = ["py310"]

[tool.pixi.tasks]
install-pre-commit = "pre-commit install"
pre-commit = "pre-commit run --all-files"
test = "pip install -e . --no-deps --force-reinstall && pytest -rxs ciso/tests"
docs = """\
jupyter nbconvert --to notebook --execute notebooks/ciso_unstructure.ipynb --output=ciso_unstructure-output.ipynb
&& jupyter nbconvert --to notebook --execute notebooks/ciso_c_grid.ipynb --output=ciso_c_grid-output.ipynb
&& mv notebooks/*output.ipynb docs/source/
&& pushd docs
&& make clean html linkcheck
&& popd
"""

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.dependencies]
cython = ">=3.0.11,<4"
numpy = ">1.19"
pytest = ">=8.3.3,<9"
pre-commit = ">=3.8.0,<4"
gridgeo = ">=1.5.2,<2"
jupyter = ">=1.1.1,<2"
nbsphinx = ">=0.9.5,<0.10"
sphinx = ">=8.0.2,<9"
pip = ">=24.2,<25"
scitools-iris = ">=3.9.0,<4"
nbclassic = ">=1.1.0,<2"
