[build-system]
requires = [
  "setuptools>=41.2",
  "setuptools-scm",
  "cython>=3",
  "numpy>=2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ciso"
dynamic = ["version"]
description = "Create isosurfaces from 2D or 3D arrays"
readme = "README.md"
authors = [
  {email = "hetland@tamu.edu"},
  {name = "Robert Hetland"}
]
requires-python = ">=3.11"
license = {text = "BSD-2-Clause"}
dependencies = [
    "numpy",
]

[project.optional-dependencies]
extras = [
    "gridgeo>=1.6.0",
    "cartopy",
    "xarray",
    "pooch",
]

[project.urls]
homepage = "https://github.com/ioos/ciso"
documentation = "https://ioos.github.io/ciso"
repository = "https://github.com/ioos/ciso"

[tool.setuptools]
license-files = ["LICENSE.txt"]
zip-safe = true
platforms = ["any"]
packages = ["ciso"]

[tool.setuptools_scm]
write_to = "ciso/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
addopts = "-s -rxs -v"

[check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.environments]
default = { features = ["py314"], solve-group = "py314" }
py314 = { features = ["py314"], solve-group = "py314" }
py313 = ["py313"]
py312 = ["py312"]
py311 = ["py311"]

[tool.pixi.tasks]
pre-commit = "pre-commit run --all-files"
install = "pip install -e . --no-deps --force-reinstall"
test = {cmd = "pytest -rxs ciso/tests", depends-on = ["install"]}
ipynb_unstructure = {cmd = "jupyter nbconvert --to notebook --execute notebooks/ciso_unstructure.ipynb --output=ciso_unstructure-output.ipynb", depends-on = ["install"]}
ipynb_c_grid = {cmd = "jupyter nbconvert --to notebook --execute notebooks/ciso_c_grid.ipynb --output=ciso_c_grid-output.ipynb", depends-on = ["ipynb_unstructure"]}
docs = {cmd = "mv notebooks/*output.ipynb docs/source/ && cd docs && make clean html linkcheck", depends-on = ["ipynb_c_grid"] }

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.dependencies]
cython = ">=3.0.11,<4"
numpy = ">=2"
pytest = ">=8.3.3,<9"
gridgeo = ">=1.6.0"
nbsphinx = ">=0.9.5,<0.10"
pip = ">=24.2,<25"
scitools-iris = ">=3.9.0,<4"
pooch = ">=1.8.2,<2"
nbconvert = ">=7.16.6,<8"
notebook = ">=7.4.4,<8"
cartopy = ">=0.24.0,<0.25"
setuptools-scm = ">=8.3.1,<9"
